force-app/main/default/objects/Portal_Sync_Object__mdt/Portal_Sync_Object__mdt.object-meta.xml
<CustomObject>
    <label>Portal Sync Object</label>
    <pluralLabel>Portal Sync Objects</pluralLabel>
</CustomObject>