force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this object is not synced -- the scheduler skips it and it is ignored everywhere. Lets an admin disable an object without deleting the row or deploying code.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>