force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Content_Changed_Field__c.field-meta.xml
<CustomField>
    <fullName>Content_Changed_Field__c</fullName>
    <description
  >API name of the provenance DateTime field on this object (e.g. HS_Content_Changed__c), stamped by the before-trigger when a mapped field actually changes. It is the Salesforce side of the inbound newest-modified-wins comparison. Leave blank to fall back to LastModifiedDate -- but note the engine's own status DML bumps LastModifiedDate, so inbound will then almost never win a conflict.</description>
    <label>Content Changed Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>