force-app/main/default/objects/Portal_Sync_Object__mdt/fields/HubSpot_Object_Path__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Object_Path__c</fullName>
    <description>Path segment used to build the CRM v3 endpoint /crm/v3/objects/{path} (e.g. contacts, companies).</description>
    <label>HubSpot Object Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>