force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Inbound_Active__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Master on/off for the HubSpot to Salesforce direction on this object, independent of Active__c (which governs the outbound direction). Default false, so deploying the inbound engine changes nothing until an admin opts an object in.</description>
    <label>Inbound Active</label>
    <type>Checkbox</type>
</CustomField>