force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Inbound_Batch_Class__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Batch_Class__c</fullName>
    <description
  >Apex class the inbound scheduler launches for this object (e.g. AccountInboundBatch). Like Outbox_Batch_Class__c it must be a distinct concrete class name, because AsyncApexJob cannot expose constructor arguments and the overlap guard keys on ApexClass.Name. Blank means the object is never polled -- a second, independent guard alongside Inbound_Active__c.</description>
    <label>Inbound Batch Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>