force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Inbound_Default_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Default_Owner__c</fullName>
    <description
  >Username that owns inbound-created records. Blank leaves OwnerId unset, so Salesforce assigns the running (scheduling) user. Note inbound does not reverse-resolve hubspot_owner_id to a Salesforce User -- ownership of HubSpot-originated records is a deliberate config choice, not a synced value.</description>
    <label>Inbound Default Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>