force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Inbound_Initial_Lookback_Days__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Initial_Lookback_Days__c</fullName>
    <description
  >Cold-start window used when no cursor row exists yet for an (object, portal). Blank defaults to 1. Deliberately small: it must never mean "import all of HubSpot" on the first run.</description>
    <label>Inbound Initial Lookback Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>