force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Inbound_Max_Pages__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Max_Pages__c</fullName>
    <description
  >Maximum search pages per (object, portal) per run. Blank defaults to 20. Bounds callouts, heap and CPU inside one transaction; hitting the cap defers the rest to the next run and still advances the watermark, so forward progress is guaranteed.</description>
    <label>Inbound Max Pages</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>