force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Inbound_Modified_Property__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Modified_Property__c</fullName>
    <description
  >HubSpot property the inbound poll filters and sorts on, and reads as the HubSpot side of the conflict comparison. Blank defaults to hs_lastmodifieddate. Configurable because contacts also expose a legacy lastmodifieddate and a custom object may differ -- a wrong property name makes HubSpot reject the search with a 400.</description>
    <label>Inbound Modified Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>