force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Inbound_Overlap_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Overlap_Seconds__c</fullName>
    <description
  >How far BEFORE the stored watermark each poll re-queries, absorbing HubSpot search-index lag (search is eventually consistent). Blank defaults to 300. Re-processing inside this window is free because every inbound write is diff-gated: an unchanged value produces no DML.</description>
    <label>Inbound Overlap Seconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>