force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Inbound_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Record_Type__c</fullName>
    <description
  >RecordType DeveloperName assigned to inbound-created records. Blank uses the running user's default record type. A DeveloperName (not an id) so the row is portable between sandbox and production.</description>
    <label>Inbound Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>