force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Last_Sync_Field__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Field__c</fullName>
    <description>API name of the last-sync datetime field on this object (e.g. HS_Last_Sync__c).</description>
    <label>Last Sync Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>