force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Outbox_Batch_Class__c.field-meta.xml
<CustomField>
    <fullName>Outbox_Batch_Class__c</fullName>
    <description>Apex class the scheduler launches to drain this object&apos;s outbox (e.g. ContactOutboxBatch, AccountOutboxBatch). A distinct class per object gives the scheduler a per-object overlap guard keyed on ApexClass.Name.</description>
    <label>Outbox Batch Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>