force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Portal_Changed_Field__c.field-meta.xml
<CustomField>
    <fullName>Portal_Changed_Field__c</fullName>
    <description>API name of the checkbox flagging a real portal move on this object (e.g. HS_Portal_Changed__c). Only records with this set pay for the archive sweep.</description>
    <label>Portal Changed Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>