force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Portal_Field__c.field-meta.xml
<CustomField>
    <fullName>Portal_Field__c</fullName>
    <description>API name of the multiselect picklist field on this object that holds the portal membership (e.g. Portal__c).</description>
    <label>Portal Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>