force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Retry_Count_Field__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count_Field__c</fullName>
    <description>API name of the retry counter field on this object (e.g. HS_Retry_Count__c). A Failed record retries until it hits MAX_RETRIES.</description>
    <label>Retry Count Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>