force-app/main/default/objects/Portal_Sync_Object__mdt/fields/SF_Id_Property__c.field-meta.xml
<CustomField>
    <fullName>SF_Id_Property__c</fullName>
    <description>HubSpot unique property that holds the Salesforce record id, used as the idProperty for batch upsert/read (e.g. contact_id_sf, account_id_sf). Must be configured UNIQUE in HubSpot.</description>
    <label>SF Id Property</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>