force-app/main/default/objects/Portal_Sync_Object__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>Salesforce SObject API name this row configures (e.g. Contact, Account).</description>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>