force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Sync_Message_Field__c.field-meta.xml
<CustomField>
    <fullName>Sync_Message_Field__c</fullName>
    <description>API name of the human-readable sync message field on this object (e.g. HS_Sync_Message__c).</description>
    <label>Sync Message Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>