force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Sync_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sync_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the record&apos;s Owner is resolved by email to a HubSpot owner and sent as hubspot_owner_id on every portal the record targets. Owner ids are portal-specific; unresolved emails are skipped and self-heal on the next pass.</description>
    <label>Sync Owner</label>
    <type>Checkbox</type>
</CustomField>