force-app/main/default/objects/Portal_Sync_Object__mdt/fields/Sync_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status_Field__c</fullName>
    <description>API name of the sync status field on this object (e.g. HS_Sync_Status__c). Holds Pending/Processing/Synced/Failed.</description>
    <label>Sync Status Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>